2010-07-09  Xiaomei Ji  <xji@chromium.org>

        Reviewed by David Levin.

        Rebaseline bidi-mirror-he-ar.html for leopard and snowleopard.
        https://bugs.webkit.org/show_bug.cgi?id=41974

        * platform/mac-leopard/fast/text/international/bidi-mirror-he-ar-expected.txt: Added.
        * platform/mac-snowleopard/platform/mac/fast/text: Removed.
        * platform/mac-snowleopard/platform/mac/fast/text/international: Removed.
        * platform/mac-snowleopard/platform/mac/fast/text/international/bidi-mirror-he-ar-expected.txt: Removed.
        * platform/mac/fast/text/international/bidi-mirror-he-ar-expected.txt:

2010-07-09  Albert J. Wong  <ajwong@chromium.org>

        Not reviewed

        [chromium] upstreaming expectations from chromium.

        * platform/chromium/test_expectations.txt:

2010-07-09  Albert J. Wong  <ajwong@chromium.org>

        Not reviewed, build fix.

        [chromium] Update test expecations for failing tests.

        * platform/chromium/test_expectations.txt:

2010-07-09  François Sausset  <sausset@gmail.com>

        Reviewed by Kenneth Rohde Christiansen.

        Test for the newly implemented MathML mathcolor & mathbackground attributes
        https://bugs.webkit.org/show_bug.cgi?id=41895

        * mathml/presentation/attributes.xhtml: Added.
        * platform/mac/mathml/presentation/attributes-expected.checksum: Added.
        * platform/mac/mathml/presentation/attributes-expected.png: Added.
        * platform/mac/mathml/presentation/attributes-expected.txt: Added.

2010-07-09  Vitaly Repeshko  <vitalyr@chromium.org>

        Unreviewed.

        [chromium] Updating expectations.

        * platform/chromium-win/svg/batik/paints/gradientLimit-expected.txt:
        * platform/chromium-win/svg/batik/paints/patternPreserveAspectRatioA-expected.txt:
        * platform/chromium-win/svg/batik/text/textLength-expected.txt:
        * platform/chromium-win/svg/carto.net/button-expected.txt: