@@ -1,16 +1,18 @@
 <head>
 <style>
-.radial1 { width:150px; height:150px; border:2px solid black;
+div { display:inline-block; }
+.radial1 { width:150px; height:150px;
            background: -webkit-gradient(radial, 75 75, 20, 75 75, 60, from(green), to(black)); }
-.radial2 { width:150px; height:150px; border:2px solid black;
+.radial2 { width:150px; height:150px;
            background: -webkit-gradient(radial, 75 75, 60, 75 75, 20, from(black), to(green)); }
-.radial3 { width:150px; height:150px; border:2px solid black;
+.radial3 { width:150px; height:150px;
            background: -webkit-gradient(radial, 75 75, 0, 75 75, 60, from(green), to(black)); }
-.radial4 { width:150px; height:150px; border:2px solid black;
+.radial4 { width:150px; height:150px;
            background: -webkit-gradient(radial, 75 75, 60, 75 75, 0, from(black), to(green)); }
 </style>
 </head>
 <body>
+The test passes if all four boxes have a radial gradient that's green in the center and black at the edge.
 <h1>Radial Gradients With One Center, Inner Radius > 0</h1>
 <div class="radial1"></div>
 <div class="radial2"></div>
