@@ -1,15 +1,26 @@
-layer at (0,0) size 785x769
-  RenderView at (0,0) size 785x600
-layer at (0,0) size 785x769
-  RenderBlock {HTML} at (0,0) size 785x769
-    RenderBody {BODY} at (8,8) size 769x753
-      RenderBlock {H1} at (0,0) size 769x37
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderBlock (anonymous) at (0,0) size 784x18
+        RenderText {#text} at (0,0) size 633x18
+          text run at (0,0) width 633: "The test passes if all four boxes have a radial gradient that's green in the center and black at the edge."
+      RenderBlock {H1} at (0,39) size 784x37
         RenderText {#text} at (0,0) size 727x37
           text run at (0,0) width 727: "Radial Gradients With One Center, Inner Radius > 0"
-      RenderBlock {DIV} at (0,58) size 154x154 [border: (2px solid #000000)]
-      RenderBlock {DIV} at (0,212) size 154x154 [border: (2px solid #000000)]
-      RenderBlock {H1} at (0,387) size 769x37
+      RenderBlock (anonymous) at (0,97) size 784x154
+        RenderBlock {DIV} at (0,0) size 150x150
+        RenderText {#text} at (150,136) size 4x18
+          text run at (150,136) width 4: " "
+        RenderBlock {DIV} at (154,0) size 150x150
+        RenderText {#text} at (0,0) size 0x0
+      RenderBlock {H1} at (0,272) size 784x37
         RenderText {#text} at (0,0) size 643x37
           text run at (0,0) width 643: "Radial Gradients With One, Inner Radius == 0"
-      RenderBlock {DIV} at (0,445) size 154x154 [border: (2px solid #000000)]
-      RenderBlock {DIV} at (0,599) size 154x154 [border: (2px solid #000000)]
+      RenderBlock (anonymous) at (0,330) size 784x154
+        RenderBlock {DIV} at (0,0) size 150x150
+        RenderText {#text} at (150,136) size 4x18
+          text run at (150,136) width 4: " "
+        RenderBlock {DIV} at (154,0) size 150x150
+        RenderText {#text} at (0,0) size 0x0
