@@ -1,3 +1,12 @@
+2010-07-09  Nico Weber  <thakis@chromium.org>
+
+        Reviewed by Simon Fraser.
+        https://bugs.webkit.org/show_bug.cgi?id=41580
+
+        Fix layout test to be smaller in y direction. Also add explanatory text.
+
+        * fast/gradients/radial-centered.html: Make divs display:inline-block.
+
 2010-07-09  Xiaomei Ji  <xji@chromium.org>
 
         Reviewed by David Levin.
